# ios-backup-browser

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: export_with_query.py  iterate_over_query.py
src/ios_backup/: __init__.py  __main__.py  _version.py  backup.py  db.py  metadata.py  tables.py
tests/: test_backup.py  test_backup_db.py  test_main.py  test_metadata.py  test_query_builder.py  test_tables.py  util.py
tests/data/sample_backup/: Info.plist  Manifest.db  Manifest.plist
