[project]
name = "ios-backup-browser"
description = "Browser and exporter for iOS backups"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/greatvovan/ios-backup-browser"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools_scm>=8"]

[tool.setuptools_scm]
version_file = "src/ios_backup/_version.py"

[tool.uv]
reinstall-package = ["ios-backup-browser"]

[tool.pytest.ini_options]
pythonpath = ["src"]
