[project]
name = "ios-backup-browser"
description = "Browser and exporter for iOS backups"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/greatvovan/ios-backup-browser"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["setuptools>=80", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "0.0.0"
version_file = "src/ios_backup/_version.py"

[tool.pytest.ini_options]
pythonpath = ["src"]
